--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-virtualized-auto-sizer": "^1.0.2",
     "react-window": "^1.8.5",
     "react-window-infinite-loader": "^1.0.5",
+    "scrollbooster": "^2.3.0",
     "styled": "^1.0.0",
     "styled-components": "^5.0.1",
     "uniqid": "^5.2.0",
